--- a/src/components/form/field_search/_field_search.scss
+++ b/src/components/form/field_search/_field_search.scss
@@ -1,9 +1,16 @@
+/*
+ * 1. Fix for Safari to ensure that it renders like a normal text input
+ *    and doesn't add extra spacing around text
+ */
+
 .euiFieldSearch {
   @include euiFormControlStyle;
   @include euiFormControlWithIcon($isIconOptional: false);
   @include euiFormControlIsLoading;
-  // This is a hack, since in Safari the search boxes were ignoring
-  // padding. Get Dave Snider involved. It improves rendering significantly
-  // although the padding still looks a bit off.
-  -webkit-appearance: textfield;
+
+  -webkit-appearance: textfield; /* 1 */
+
+  &::-webkit-search-decoration {
+    -webkit-appearance: none;  /* 1 */
+  }
 }
