--- a/src/components/form/form_control_layout/_form_control_layout_custom_icon.scss
+++ b/src/components/form/form_control_layout/_form_control_layout_custom_icon.scss
@@ -4,8 +4,6 @@
 
 .euiFormControlLayoutCustomIcon--clickable {
   pointer-events: all;
-  height: $euiSize;
-  width: $euiSize;
   @include size($euiSize);
 
   .euiFormControlLayoutCustomIcon__clickableIcon {
@@ -13,8 +11,11 @@
   }
 
   &:focus {
-    background: $euiColorPrimary;
-    border-radius: 100%;
-    color: $euiColorGhost;
+    @include euiFocusRing;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    color: $euiFormControlDisabledColor;
   }
 }
