--- a/src/components/form/form_control_layout/_form_control_layout_icons.scss
+++ b/src/components/form/form_control_layout/_form_control_layout_icons.scss
@@ -8,11 +8,18 @@
   align-items: center;
 
   > * + * {
-    margin-left: $euiFormControlPadding;
+    margin-left: $euiFormControlPadding/2;
   }
 }
 
 .euiFormControlLayoutIcons--right {
   left: auto;
   right: $euiFormControlPadding;
+}
+
+
+// If the control is disabled, change the color of the icons
+*:disabled + .euiFormControlLayoutIcons {
+  cursor: not-allowed;
+  color: $euiFormControlDisabledColor;
 }
