--- a/src/components/form/form_row/_form_row.scss
+++ b/src/components/form/form_row/_form_row.scss
@@ -1,6 +1,6 @@
 /**
  * 1. Coerce inline form elements to behave as block-level elements.
- * 2. For inline forms, we need to add padding if the label doesn't exist.
+ * 2. For inline forms, we need to add margin if the label doesn't exist.
  */
 .euiFormRow {
   display: flex; /* 1 */
@@ -17,7 +17,12 @@
   }
 
   &.euiFormRow--hasEmptyLabelSpace {
-    padding-top: $euiFontSizeXS + $euiSizeS; /* 2 */
+    margin-top: $euiFontSizeXS + $euiSizeS; /* 2 */
+    // the following ensure that contents that aren't inheritly the same height
+    // as inputs will align to the vertical center
+    min-height: $euiSizeXXL;
+    padding-bottom: 0;
+    justify-content: center;
   }
 
   &.euiFormRow--compressed {
