--- a/src/components/form/text_area/_text_area.scss
+++ b/src/components/form/text_area/_text_area.scss
@@ -1,5 +1,25 @@
 .euiTextArea {
   @include euiFormControlStyle;
+  line-height: $euiLineHeight; // give more spacing between multiple lines
+
   // Textareas have their own sizing
-  height: auto !important;
+  &,
+  &--compressed {
+    height: auto;
+  }
+}
+
+// resize modifiers
+$textareaResizing: (
+  vertical: "resizeVertical",
+  horizontal: "resizeHorizontal",
+  both: "resizeBoth",
+  none: "resizeNone",
+);
+
+// Create button modifiders based upon the map.
+@each $direction, $modifier in $textareaResizing {
+  .euiTextArea--#{$modifier} {
+    resize: #{$direction};
+  }
 }
