--- a/src/components/form/file_picker/_file_picker.scss
+++ b/src/components/form/file_picker/_file_picker.scss
@@ -65,7 +65,6 @@
     display: block;
     background: $euiColorLightestShade;
     padding: $euiSizeL;
-    //border-radius: $euiBorderRadius / 2;
     background: $euiFormBackgroundColor;
     text-align: center;
     transition:
@@ -76,9 +75,10 @@
 
     @at-root {
       .euiFilePicker--compressed#{&} {
-        padding: $euiSizeS $euiSize $euiSizeS $euiSizeXXL; /* 3 */
+        height: $euiFormControlHeight--compressed;
+        padding: $euiFormControlPadding--compressed;
+        @include euiFormControlWithIcon(); /* 3 */
         text-align: left;
-        height: $euiSizeXL;
       }
     }
   }
@@ -107,10 +107,10 @@
 
     @at-root {
       .euiFilePicker--compressed#{&} {
+        @include euiFormControlLayoutClearIcon('.euiFilePicker__clearIcon');
         position: absolute;
         top: $euiSizeM/2;
         right: $euiSizeM;
-        @include euiFormControlLayoutClearIcon('.euiFilePicker__clearIcon');
       }
     }
   }
@@ -136,7 +136,7 @@
   }
 
   &.euiFilePicker-hasFiles.euiFilePicker--compressed .euiFilePicker__prompt {
-    padding-right: $euiSizeXXL; /* 3 */
+    @include euiFormControlWithIcon(false, "right"); /* 3 */
   }
 
   // When the filepicker has files in it, but not in compressed mode
