--- a/src/themes/eui/eui_colors_dark.scss
+++ b/src/themes/eui/eui_colors_dark.scss
@@ -1,10 +1,10 @@
 // Dark theme overides
 
 $euiColorEmptyShade: #222;
-$euiColorLightestShade: #272727;
+$euiColorLightestShade: #242424;
 $euiColorLightShade: #333;
 $euiColorMediumShade: #444;
-$euiColorDarkShade: #D9D9D9;
+$euiColorDarkShade: #8A8A8A;
 $euiColorDarkestShade: #F5F5F5;
 $euiColorFullShade: #FFF;
 $euiColorSlightHue: #494E51;
