--- a/src/themes/k6/k6_colors_dark.scss
+++ b/src/themes/k6/k6_colors_dark.scss
@@ -1,13 +1,15 @@
 // Dark theme overides
 
 $euiColorEmptyShade: #222;
-$euiColorLightestShade: #272727;
+$euiColorLightestShade: #242424;
 $euiColorLightShade: #333;
 $euiColorMediumShade: #444;
-$euiColorDarkShade: #D9D9D9;
+$euiColorDarkShade: #8A8A8A;
 $euiColorDarkestShade: #F5F5F5;
 $euiColorFullShade: #FFF;
+$euiColorSlightHue: #494E51;
 $euiColorPrimary: #4da1c0;
+$euiColorWarning: #c06c4c;
 $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
