Responsive refactors and addition of helpers (#909)

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -174,7 +174,7 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 @import "guide_section/index";
 @import "guide_rule/index";
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
 
   .guideBody {
     background: none;
