--- a/src/components/date_picker/_date_picker.scss
+++ b/src/components/date_picker/_date_picker.scss
@@ -586,7 +586,7 @@
 }
 
 // We drop the time picker on mobile. They can still type in the time directly.
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .react-datepicker__time-container {
     display: none;
   }
