--- a/src/components/form/described_form_group/_described_form_group.scss
+++ b/src/components/form/described_form_group/_described_form_group.scss
@@ -39,7 +39,7 @@
     }
   }
 
-  @include screenXSmall {
+  @include euiBreakpoint('xs','s') {
     .euiDescribedFormGroup__fields {
       padding-top: 0;
 
