--- a/src/components/page/page_body/_page_body.scss
+++ b/src/components/page/page_body/_page_body.scss
@@ -5,7 +5,7 @@
   min-height: 400px; // Temporary till we have a better doc system.
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .euiPageBody {
     flex-direction: column;
   }
