--- a/src/components/page/page_content/_page_content_header.scss
+++ b/src/components/page/page_content/_page_content_header.scss
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .euiPageContentHeader {
     flex-direction: column;
   }
