--- a/src/components/page/page_header/_page_header_section.scss
+++ b/src/components/page/page_header/_page_header_section.scss
@@ -4,7 +4,7 @@
     margin-left: $euiSizeXL;
   }
 }
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
 
   .euiPageHeaderSection {
     width: 100%;
