--- a/src/components/page/page_side_bar/_page_side_bar.scss
+++ b/src/components/page/page_side_bar/_page_side_bar.scss
@@ -7,7 +7,7 @@
   margin-right: $euiSizeL;
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .euiPageSideBar {
     width: 100%;
   }
