--- a/src/components/side_nav/_side_nav.scss
+++ b/src/components/side_nav/_side_nav.scss
@@ -45,7 +45,7 @@
   top: $euiSizeXL;
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   /**
    * 1. Animation doesn't work against height. Need max-height instead.
    *    We set a value larger than what is needed to fake "auto".
