--- a/src/components/toast/_global_toast_list.scss
+++ b/src/components/toast/_global_toast_list.scss
@@ -55,7 +55,7 @@
   }
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   /**
    * 1. Mobile we make these 100%. Matching change happens on the item as well.
    */
