--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -22,7 +22,7 @@
 }
 
 // On mobile we force them to stack and act the same.
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .euiFlexGroup--responsive > .euiFlexItem,
   .euiFlexGrid > .euiFlexItem {
     width: 100% !important;
