--- a/src/components/pagination/_pagination_button.scss
+++ b/src/components/pagination/_pagination_button.scss
@@ -17,7 +17,7 @@
   cursor: default;
 }
 
-@include screenXSmall {
+@include euiBreakpoint('xs','s') {
   .euiPaginationButton--hideOnMobile {
     display: none;
   }
