--- a/src/components/flyout/_flyout_header.scss
+++ b/src/components/flyout/_flyout_header.scss
@@ -1,6 +1,10 @@
 .euiFlyoutHeader {
   flex-grow: 0;
-  padding: $euiSizeL;
-  padding-bottom: 0;
+  padding: $euiSizeL $euiSizeXXL 0 $euiSizeL;
   @include euiOverflowShadowBottom;
+}
+
+.euiFlyoutHeader--hasBorder {
+  padding-bottom: $euiSizeL;
+  border-bottom: $euiBorderThin;
 }
