--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -50,12 +50,7 @@
 
   &.euiComboBox-isOpen {
     .euiComboBox__inputWrap {
-      background: $euiColorEmptyShade;
-      box-shadow:
-        0 4px 4px -2px rgba(0, 0, 0, 0.1),
-        0 0 0 1px rgba(0,0,0,0.16),
-        inset 0 0 0 0 $euiColorEmptyShade,
-        inset 0 -2px 0 0 $euiColorPrimary;
+      @include euiFormControlFocusStyle;
     }
   }
 
