--- a/src/components/form/select/_select.scss
+++ b/src/components/form/select/_select.scss
@@ -14,12 +14,17 @@
   padding-bottom: 0; /* 2 */
 
   &--compressed {
-    line-height: $euiFormControlHeight--compressed; /* 2 */
+    line-height: $euiFormControlCompressedHeight; /* 2 */
     padding-top: 0; /* 2 */
     padding-bottom: 0; /* 2 */
   }
 
   &::-ms-expand {
     display: none;
+  }
+
+  &:focus::-ms-value {
+    color: $euiTextColor;
+    background: transparent;
   }
 }
